change patch methods
