# docs/swagger.json
@@ -284,7 +284,7 @@
                 "tags": [
                     "dentists"
                 ],
-                "summary": "Update a dentist by id",
+                "summary": "Update a dentist registry number by id",
                 "parameters": [
                     {
                         "type": "integer",
@@ -294,12 +294,12 @@
                         "required": true
                     },
                     {
-                        "description": "Dentist information",
-                        "name": "Dentist",
+                        "description": "Dentist registry number",
+                        "name": "DentistRegistry",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.DentistDTO"
+                            "$ref": "#/definitions/domain.DentistRegistryDTO"
                         }
                     }
                 ],
@@ -510,7 +510,7 @@
                 "tags": [
                     "patients"
                 ],
-                "summary": "Update a patient by id",
+                "summary": "Update a patient dni by id",
                 "parameters": [
                     {
                         "type": "integer",
@@ -520,12 +520,12 @@
                         "required": true
                     },
                     {
-                        "description": "Patient information",
+                        "description": "Patient DNI",
                         "name": "Patient",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.PatientDTO"
+                            "$ref": "#/definitions/domain.PatientDniDTO"
                         }
                     }
                 ],
@@ -567,6 +567,14 @@
                 }
             }
         },
+        "domain.DentistRegistryDTO": {
+            "type": "object",
+            "properties": {
+                "registry": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.LoginDTO": {
             "type": "object",
             "properties": {
@@ -591,6 +599,14 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.PatientDniDTO": {
+            "type": "object",
+            "properties": {
+                "dni": {
                     "type": "string"
                 }
             }
